--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -4,7 +4,7 @@
 # 项目的路径
 chdir           = /srv/meituan
 # Django的wsgi文件
-module          = meituan.wsgi
+module          = mtserver.wsgi
 # Python虚拟环境的路径
 home            = /root/.virtualenvs/django-env
 
